--- a/sunnyside/src/Index.css
+++ b/sunnyside/src/Index.css
@@ -31,4 +31,8 @@
 
 .container {
   width: var(--width_container);
+}
+
+body {
+  background-color: #fffbf8;
 }/*# sourceMappingURL=Index.css.map */
