--- a/sunnyside/src/Pages/Main/Section/About/About.css
+++ b/sunnyside/src/Pages/Main/Section/About/About.css
@@ -6,23 +6,44 @@
   justify-content: space-between;
   align-items: center;
 }
-#About .container .section-container .section:nth-child(even) {
+#About .container .section-container .section:nth-child(odd) {
   flex-direction: row-reverse;
+}
+#About .container .section-container .section:nth-child(odd) .details .text-Container .link .border {
+  background-color: var(--color_softred);
 }
 #About .container .section-container .section .details {
   width: 50%;
-  padding: 50px;
+  display: grid;
+  place-items: center;
 }
 #About .container .section-container .section .details .text-Container {
+  width: 350px;
   display: flex;
   flex-direction: column;
   gap: 40px;
 }
 #About .container .section-container .section .details .text-Container .title h1 {
+  color: var(--color_light_grayish_blue);
   font-family: var(--font_title);
+}
+#About .container .section-container .section .details .text-Container .subtitle {
+  color: var(--color_light_grayish_blue);
 }
 #About .container .section-container .section .details .text-Container .link a {
   font-family: var(--font_title);
+  color: var(--color_black);
+  font-weight: 900;
+}
+#About .container .section-container .section .details .text-Container .link .border {
+  opacity: 40%;
+  width: 95px;
+  height: 8px;
+  background-color: var(--color_yellow);
+  position: absolute;
+  transform: translateY(-6px);
+  z-index: -1;
+  border-radius: 50px;
 }
 #About .container .section-container .section .image {
   display: grid;
@@ -35,4 +56,25 @@
 #About .container .section-container .section .image picture img {
   width: 100%;
   height: 100%;
+}
+
+@media screen and (min-width: 1px) and (max-width: 768px) {
+  #About .container .section-container .section {
+    flex-direction: column;
+  }
+  #About .container .section-container .section:nth-child(odd) {
+    flex-direction: column;
+  }
+  #About .container .section-container .section .image {
+    width: 100%;
+  }
+  #About .container .section-container .section .image img {
+    width: 100%;
+  }
+  #About .container .section-container .section .details {
+    width: 100%;
+  }
+  #About .container .section-container .section .details .text-Container {
+    padding: 20px;
+  }
 }/*# sourceMappingURL=About.css.map */
