--- a/sunnyside/src/Pages/Main/Section/About/About.scss
+++ b/sunnyside/src/Pages/Main/Section/About/About.scss
@@ -6,24 +6,51 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        &:nth-child(even) {
+        &:nth-child(odd) {
           flex-direction: row-reverse;
+          .details {
+            .text-Container {
+              .link {
+                .border {
+                  background-color: var(--color_softred);
+                }
+              }
+            }
+          }
         }
         .details {
           width: 50%;
-          padding: 50px;
+          display: grid;
+          place-items: center;
           .text-Container {
+            width: 350px;
             display: flex;
             flex-direction: column;
             gap: 40px;
             .title {
               h1 {
+                color: var(--color_light_grayish_blue);
                 font-family: var(--font_title);
               }
+            }
+            .subtitle {
+              color: var(--color_light_grayish_blue);
             }
             .link {
               a {
                 font-family: var(--font_title);
+                color: var(--color_black);
+                font-weight: 900;
+              }
+              .border {
+                opacity: 40%;
+                width: 95px;
+                height: 8px;
+                background-color: var(--color_yellow);
+                position: absolute;
+                transform: translateY(-6px);
+                z-index: -1;
+                border-radius: 50px;
               }
             }
           }
@@ -37,6 +64,33 @@
             img {
               width: 100%;
               height: 100%;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 1px) and (max-width: 768px) {
+  #About {
+    .container {
+      .section-container {
+        .section {
+          flex-direction: column;
+          &:nth-child(odd) {
+            flex-direction: column;
+          }
+          .image {
+            width: 100%;
+            img {
+              width: 100%;
+            }
+          }
+          .details {
+            width: 100%;
+            .text-Container {
+              padding: 20px;
             }
           }
         }
