--- a/sunnyside/src/Pages/Main/Section/Scope/Scope.scss
+++ b/sunnyside/src/Pages/Main/Section/Scope/Scope.scss
@@ -12,18 +12,24 @@
         justify-content: center;
         align-items: center;
         .image {
-          img {
-            width: 100%;
+          width: 100%;
+          picture {
+            display: grid;
+            place-items: center;
+            img {
+              width: 100%;
+              height: 100%;
+            }
           }
         }
         .details {
           position: absolute;
           width: 320px;
           text-align: center;
-          transform: translateY(120px);
+          transform: translateY(110px);
           .title {
-            margin-bottom: 20px;
-            h1 {
+            margin-bottom: 10px;
+            h2 {
               font-family: var(--font_title);
             }
           }
@@ -42,6 +48,8 @@
         .section {
           width: 100%;
           margin: auto;
+          .image {
+          }
         }
       }
     }
