--- a/sunnyside/src/Pages/Main/Section/Testimonial/Testimonial.css
+++ b/sunnyside/src/Pages/Main/Section/Testimonial/Testimonial.css
@@ -52,4 +52,14 @@
   aspect-ratio: 1/1;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+@media screen and (min-width: 1px) and (max-width: 768px) {
+  #Testimonial .container .gallery-section {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+  #Testimonial .container .gallery-section img {
+    width: 100%;
+  }
 }/*# sourceMappingURL=Testimonial.css.map */
