--- a/sunnyside/src/Pages/Main/Section/Testimonial/Testimonial.scss
+++ b/sunnyside/src/Pages/Main/Section/Testimonial/Testimonial.scss
@@ -54,3 +54,17 @@
     }
   }
 }
+
+@media screen and (min-width: 1px) and (max-width: 768px) {
+  #Testimonial {
+    .container {
+      .gallery-section {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        img {
+          width: 100%;
+        }
+      }
+    }
+  }
+}
